# playlist-scorer

./: .gitignore  README.md  pyproject.toml  render.yaml
app/: __init__.py  cli.py
app/api/: main.py
app/bot/: simple_telegram_bot.py  telegram_bot.py  telegram_messages.py
app/core/: __init__.py  engine.py  version.py
app/core/classification/: __init__.py  rules.py
app/core/config/: loader.py
app/core/enrichment/: __init__.py  local_knowledge.py
app/core/ingestion/: __init__.py  parser.py
app/core/models/: __init__.py  domain.py
app/core/output/: card.py
app/core/scoring/: metrics.py
app/core/utils/: normalization.py
app/data/artists/: artists.json
app/data/rules/: normalization.json  pipeline_weights.json  thresholds.json
app/data/scenes/: scenes.json
docs/: architecture.md  deploy.md  roadmap.md  telegram.md
examples/: minimal_wave.txt
tests/: test_engine.py  test_parser.py  test_simple_telegram_bot.py  test_telegram_messages.py
